# Hospital-Management-System-OOP-Project

./: .gitignore  CMakeLists.txt  Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  Human.cpp  Human.h  Nurse.cpp  Nurse.h  Patient.cpp  Patient.h  README.md  main.cpp
Files/: Bill.txt  Doctors.txt  Doctors_Timetable.txt  Nurses.txt  Nurses_Timetable.txt  Patients.txt  Visited_Patients.txt
